# sdl_implementation_reference

./: CMakeLists.txt  HowToBuild.md  HowToBuild.txt  LICENSE  README.md
include/openssl/: opensslconf.h
src/3rd_party-static/: CMakeLists.txt
src/3rd_party-static/MessageBroker/: CMakeLists.txt
src/3rd_party-static/encryption/: CMakeLists.txt
src/3rd_party-static/libusbx-1.0.16/: CMakeLists.txt  config.h
src/3rd_party-static/openssl-1.1.0e/: CMakeLists.txt
src/3rd_party-static/openssl-fips-2.0.9/: CMakeLists.txt
src/3rd_party-static/sqlite3-3.18/: CMakeLists.txt
src/appMain/: CMakeLists.txt  install_libs  log4cxx.properties  main.cc  smartDeviceLink.ini
src/components/: CMakeLists.txt
src/components/HMI/app/model/sdl/: Model.js
src/components/HMI/ffw/: UIRPC.js
src/components/application_manager/: CMakeLists.txt
src/components/application_manager/src/: application_manager_impl.cc
src/components/application_manager/src/policies/: policy_handler.cc
src/components/config_profile/: CMakeLists.txt
src/components/connection_handler/: CMakeLists.txt
src/components/formatters/: CMakeLists.txt
src/components/hmi_message_handler/: CMakeLists.txt
src/components/include/transport_manager/transport_adapter/: transport_adapter.h
src/components/interfaces/: CMakeLists.txt
src/components/media_manager/: CMakeLists.txt
src/components/policy/: CMakeLists.txt
src/components/protocol/: CMakeLists.txt
src/components/protocol_handler/: CMakeLists.txt
src/components/resumption/: CMakeLists.txt
src/components/security_manager/: CMakeLists.txt
src/components/security_manager/include/security_manager/: security_manager_impl.h
src/components/smart_objects/: CMakeLists.txt
src/components/transport_manager/: CMakeLists.txt
src/components/transport_manager/src/: transport_manager_default.cc  transport_manager_impl.cc
src/components/transport_manager/src/bluetooth/: bluetooth_device_scanner.cc  bluetooth_transport_adapter.cc
src/components/utils/: CMakeLists.txt
src/components/utils/src/: file_system.cc
(+26 files in other folders)
