set(SQLITE3_INCLUDE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
set(SQLITE3_INCLUDE_DIRECTORY ${SQLITE3_INCLUDE_DIRECTORY} PARENT_SCOPE)

ADD_DEFINITIONS(-DHYCOMMONWINAPI_EXPORTS)

set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-fPIC")

include_directories(
  ./
)

set(SQLITE3_SOURCES
  ./sqlite3.c
)

add_library("sqlite3" ${SQLITE3_SOURCES})
